# Rafi

./: .env.example  .gitignore  .mocharc.yml  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json  vercel.json
app/: README.md
app/web/: next.config.ts  package-lock.json  package.json  vercel.json
app/web/src/app/: globals.css  layout.tsx  page.tsx
app/web/src/app/api/indexer/: route.ts
app/web/src/app/api/pool-meta/: route.ts
app/web/src/app/pool/[id]/: page.tsx
app/web/src/app/portfolio/: page.tsx
app/web/src/app/sell/: page.tsx
app/web/src/components/: AuthButtons.tsx  BuySlider.tsx  ClientOnly.tsx  Faq.tsx  FillRing.tsx  HowItWorks.tsx  LoginModal.tsx  PoolCard.tsx  PrivyProvider.tsx  QuickBuyModal.tsx  RecentWinners.tsx  SupabaseProvider.tsx
app/web/src/lib/: anchor.ts  constants.ts  format.ts  hooks.ts  idl.json  mockData.ts  pyth.ts  rafi-types.ts  supabase.ts  tokens.ts  usePythPrice.ts
app/web/supabase/: schema.sql
migrations/: deploy.ts
programs/rafi/: Cargo.toml
programs/rafi/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/rafi/src/instructions/: admin.rs  claim_asset_back.rs  claim_refund.rs  create_pool.rs  expire_pool.rs  initialize_protocol.rs  mint_probability.rs  mod.rs  request_settlement.rs  settle_pool.rs
programs/rafi/src/state/: mod.rs  pool.rs  position.rs  protocol.rs
scripts/: indexer.ts  init-protocol.ts
sdk/: README.md
tests/: rafi.ts
