[package]
name = "rafi"
version = "0.1.0"
description = "RAFI — P2P Probabilistic Exchange Protocol"
edition = "2021"
license = "BUSL-1.1"

[lib]
crate-type = ["cdylib", "lib"]
name = "rafi"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", features = ["token"] }
switchboard-on-demand = "0.12.1"
pyth-solana-receiver-sdk = "1.1.0"
